--- a/..md
+++ b/..md
@@ -16,3 +16,14 @@ Also there's sentence or paragraph embeddings - mapping sentences/paras to numer
 - gpt tokenizer also doesn't use <| unk |> token for out of vocab words instead they use byte pair encoding which breaks down words into subwords
 
 ### 2.5 Byte Pair Encoding
+(book doesn't go deep  in this but i will, lol)  
+
+BPE ooks at data then decides how to tokenize them, went ahead and found out the whole algorithm, it's relatively easy
+
+```
+for k times:
+    - choose the most frequentyly adjacent symbols (suppose t and h are appearing together a lot)
+    - replace every adjacent t and h with th - like link them together
+```
+
+normally used with `tiktoken` - library for tokenizing, duh?
