--- a/..md
+++ b/..md
@@ -18,7 +18,7 @@ Also there's sentence or paragraph embeddings - mapping sentences/paras to numer
 ### 2.5 Byte Pair Encoding
 (book doesn't go deep  in this but i will, lol)  
 
-BPE ooks at data then decides how to tokenize them, went ahead and found out the whole algorithm, it's relatively easy
+BPE looks at data then decides how to tokenize them, went ahead and found out the whole algorithm, it's relatively easy
 
 ```
 for k times:
@@ -27,3 +27,8 @@ for k times:
 ```
 
 normally used with `tiktoken` - library for tokenizing, duh?
+
+BPE is better than regex-based simple tokenizer's because if it encounters an unfamiliar word, it cann represent it as a sequence of subword tokens or chars.
+
+
+### 2.6 Data Sampling wih a sliding window
