input/target tensors with batch encoding

--- a/..md
+++ b/..md
@@ -32,3 +32,12 @@ BPE is better than regex-based simple tokenizer's because if it encounters an un
 
 
 ### 2.6 Data Sampling wih a sliding window
+Next step is to create input-target pairs.  
+Input is the group of words you feed into an llm  
+target would be the word that it should predict  
+
+##### Sliding window Approach: 
+take a chunk of tokens, create x from 0:lastidx and then a y from 1:lastidx+1
+
+- the first approach is to create two lists with indices as described above
+- You then create a GPTDatasetv1, which is in short the same list of token ids except this time it's a tensor (multidimensional array - see fig2.13 again? )
