--- a/..md
+++ b/..md
@@ -45,3 +45,16 @@ take a chunk of tokens, create x from 0:lastidx and then a y from 1:lastidx+1
 the code here was kinda complicating so just to recap:  
 - created a gptdatasetv1, all its doing is creating the input-target pair splits except it is tensors instead of lists. One more extra thing is that it's splitting these into chunks. say you have a text of 1000 tokens. GPTDatasetV1 will convert that into 1000 token ids, split by idk say 10 (which is the attribute `max_length`) so there's 100 splits of 10 token ids each and there's an attribute `stride` which means um say you created input/target pairs for 10 tokens (coz 10 is `max_length` suppose) - after creating a batch of 0-9 tokens, we will move forward by `stride` (suppose `stride` is 5) so you move to token 5 (think 0,1,2,3,4 is 5 tokens so the next is token number 5, i hope im making sense??) then repeat. Now for each of these splits (each split is `max_length` long), you have two tensors : an input tensor and a target tensor. 
 Each target tensor is the same as it's input sensors just shifted by 1
+- `createdataloaderv1` is just initializing a tiktoken tokenizer and sending it to to the `GPTDatasetV1` class  
+  
+  
+Smaller batch sizes = Noisy model updates, which is why its normal to have batch sizes over atleast 256.  
+However,  
+Smaller batch sizes = less memory required during training, so batch size is a tradeoff to experiment wd
+
+Also note, batch_size is the length of a tensor and max_length is the number of items in each inner list (coz multidimensioanl array, remember) 
+
+
+
+### 2.7 Create token embeddings
+(gotta read more into neural networks wd back propagation brb)
