--- a/..md
+++ b/..md
@@ -57,4 +57,8 @@ Also note, batch_size is the length of a tensor and max_length is the number of 
 
 
 ### 2.7 Create token embeddings
-(gotta read more into neural networks wd back propagation brb)
+- embeddings are vector representation of tokens. 
+- In training, you have tokens, you assign a random embedding to all of them then you try predicting the next word in a sentence - this would mostly be wrong so you go back (back propagation) to figure where the error came from then you calculate loss and all to adjust embedding vector values plus some weights now your model is slightly better. repeat this a 1000 times until your model gets better. 
+- `vocab_size` and `output_dim` is the dimension of the resulting tensor embedding thingy
+
+page 42 onwards , i dont get it :/
