--- a/..md
+++ b/..md
@@ -62,3 +62,9 @@ Also note, batch_size is the length of a tensor and max_length is the number of 
 - `vocab_size` and `output_dim` is the dimension of the resulting tensor embedding thingy
 
 page 42 onwards , i dont get it :/
+
+
+### 2.8 Encoding word positions
+There are two types of encodings:
+- Positional Encodings
+- Relational Encodings
