created another embedding layer

--- a/..md
+++ b/..md
@@ -65,6 +65,16 @@ page 42 onwards , i dont get it :/
 
 
 ### 2.8 Encoding word positions
-There are two types of encodings:
-- Positional Encodings
-- Relational Encodings
+The token id remains the same regardless of it's position and regardless of how far apart it is. Now you can think of a problem here, 
+imagine two sentences "i dont think this is working" and "i like this", the position of "this" and "i" in both of the sentences has variable lengths but the words in both of these sentences will have the same token id. "this" in sentence 1 and sentence 2 will have the same token id even though they are used in different contexts and you can see how the model will have probs figuring out what words to pay attention to if they just have the same token ids.  
+
+To solve this, there's two broad categories of position-aware embeddings (embeddings unlike the ones described above, they are aware of the "context" so to speak)  
+
+- **Absolute Positional Embeddings**:  
+. Absolute Positional Embeddings are directly associated with specific positions in a sequence. 
+
+
+- **Relative Positional Embeddings**:  
+Relative positional embeddings will tell you relationships based on how far apart instead of "at wihch exact position". this will help generalizing better to variable sequence length
+
+(GPT models use ansolute positional embeddings, instead of fixed positional encodings in the original transformer model)
