--- a/..md
+++ b/..md
@@ -1,6 +1,17 @@
 ### 2.1 understanding word embeddings
-embeddings are just convertin non numerica data (such as text) into numeric data - this is called word embedding. map each word to a numeric data.
+embeddings are just convertin non numerical data (such as text) into numeric data - this is called word embedding. map each word to a numeric data.
 Also there's sentence or paragraph embeddings - mapping sentences/paras to numeric data (used in RAG btw)
+
+word2vec is an embedding model that would figure out the word embeddings by predicting the context of that word given the target or by predicting the target given the context (exact details idk man)  
+words that appear in similar contexts tend to have similar meaning  
+Pretrained models are used to generate embeddings for ML models, llms however have their own embeddings in the input layer and are updated during training. Well why not just use word2vec?? here's the thing if you train your own embedding model then you have your data fitting into your context - it will match more with the context of you training data instead of something generic that word2vec will likely produce
+
+Even the smallest gpt2 models with 117M and 125M parameters use an embedding size of 768 dimensions. GPT3 with 175b parameters uses 12,288 dimensions (sheesh)
+
+summary:
+- Embeddings is the process of converting words/sentences(depends) into vectors
+- word2vec is a pretrained neural network normally used to generate embeddings for ml models
+- llms usually do not use 
 
 ### 2.2 tokenizing text
 - each word is a token, each special character is a token, each whitespace is a token
@@ -8,7 +19,7 @@ Also there's sentence or paragraph embeddings - mapping sentences/paras to numer
 
 ### 2.3 converting tokens into token ids
 - just grab all words, create a set to remove duplicates, assign a number to each
-- then you can mathematically represent the same words by using their token ids
+- then you can mathematically represent the same words by using their token ids 
 
 ### 2.4 Special context tokens
 - for words out of vocab, use the <| unk |> token, and <| EOS |> or <| end of text|> for end of a sentence (helps model understand context)
@@ -66,7 +77,7 @@ page 42 onwards , i dont get it :/
 
 ### 2.8 Encoding word positions
 The token id remains the same regardless of it's position and regardless of how far apart it is. Now you can think of a problem here, 
-imagine two sentences "i dont think this is working" and "i like this", the position of "this" and "i" in both of the sentences has variable lengths but the words in both of these sentences will have the same token id. "this" in sentence 1 and sentence 2 will have the same token id even though they are used in different contexts and you can see how the model will have probs figuring out what words to pay attention to if they just have the same token ids.  
+imagine two sentences "I dont think this is working" and "I like this", the position of "this" and "i" in both of the sentences has variable lengths but the words in both of these sentences will have the same token id. "this" in sentence 1 and sentence 2 will have the same token id even though they are used in different contexts and you can see how the model will have probs figuring out what words to pay attention to if they just have the same token ids.  
 
 To solve this, there's two broad categories of position-aware embeddings (embeddings unlike the ones described above, they are aware of the "context" so to speak)  
 
