--- a/..md
+++ b/..md
@@ -8,14 +8,21 @@ Pretrained models are used to generate embeddings for ML models, llms however ha
 
 Even the smallest gpt2 models with 117M and 125M parameters use an embedding size of 768 dimensions. GPT3 with 175b parameters uses 12,288 dimensions (sheesh)
 
-summary:
+Summary:
 - Embeddings is the process of converting words/sentences(depends) into vectors
 - word2vec is a pretrained neural network normally used to generate embeddings for ml models
-- llms usually do not use 
+- llms usually do not use word2vec. They have their own embeddings in the input layer. Think of llms as one neural network - everything is happening within
 
 ### 2.2 tokenizing text
-- each word is a token, each special character is a token, each whitespace is a token
-- exccept each whitespace is skipped, all others are split into tokens
+now forget embeddings for a while, you need to tokenize text first.
+- each word is a token, each special character is a token
+- each whitespace is skipped, all others are split into tokens\
+
+so you:
+- downloaded the verdict, read it
+- to understand tokenization, you write a regex that will split words on each whitespace (to get singular words)
+- some words are connected with a punctuation so you're now splitting each punctuation mark too. 
+- now loop through each and remove whitespace tokens for the simplicity 
 
 ### 2.3 converting tokens into token ids
 - just grab all words, create a set to remove duplicates, assign a number to each
