--- a/..md
+++ b/..md
@@ -25,8 +25,45 @@ so you:
 - now loop through each and remove whitespace tokens for the simplicity 
 
 ### 2.3 converting tokens into token ids
-- just grab all words, create a set to remove duplicates, assign a number to each
-- then you can mathematically represent the same words by using their token ids 
+In this step you will convert all tokens into token ids. This step comes before converting the token ids into embedding vectors. 
+So far;
+- split text into tokens
+- convert into token ids 
+- then comes 'embeddings'  
+To convert into token ids; 
+- just grab all words, create a set to remove duplicates
+- use enumerate to assign a number to each and create a dict object - call it `vocab`
+- now we'll use this `vocab` to convert all the tokens into token ids. You have a map, now you transform everything according to that map. 
+  
+![Figure 2.7](md-assets/image.png)  
+  
+
+At this point, you have a list of token_ids adjacent to each token so you can convert your original list of tokens into token_ids. 
+Now well you need the opposite as well so you create a tokenizer class with an `encode` method that splits text into tokens and carries out the string-to-integer mapping to produce token IDs via the vocabulary and a `decode` method that carries out the reverse integer-to-string mapping to convert the token ids back into text. 
+you create the `SimpleTokenizerV1` class for this:
+
+```Python
+class SimpleTokenizerV1:
+    def __init__(self, vocab):
+        self.str_to_int = vocab
+        self.int_to_str = { i:s for s,i in vocab.items() }
+
+    def encode(self,text):
+        preprocessed = re.split(r'([,.?_!"()\']|--|\s)', text)
+        preprocessed = [item.strip() for item in preprocessed if item.strip()]
+        ids = [self.str_to_int[s] for s in preprocessed]
+        return ids
+
+    def decode(self, ids):
+        text = " ".join([self.int_to_str[i] for i in ids])
+        text = re.sub(r'\s+([,.?!"()\'])', r'\1', text)
+        return text
+    
+```
+
+Now try using a word which is not available in the vocab - (book used 'hello') and you'll get an error because the vocab does not know what you're saying - as that word wasn't in `the-verdict.txt`
+
+
 
 ### 2.4 Special context tokens
 - for words out of vocab, use the <| unk |> token, and <| EOS |> or <| end of text|> for end of a sentence (helps model understand context)
