--- a/..md
+++ b/..md
@@ -1,3 +1,5 @@
+# Chapter 2
+
 ### 2.1 understanding word embeddings
 embeddings are just convertin non numerical data (such as text) into numeric data - this is called word embedding. map each word to a numeric data.
 Also there's sentence or paragraph embeddings - mapping sentences/paras to numeric data (used in RAG btw)
@@ -105,10 +107,9 @@ for k times:
     - choose the most frequentyly adjacent symbols (suppose t and h are appearing together a lot)
     - replace every adjacent t and h with th - like link them together
 ```
-
-normally used with `tiktoken` - library for tokenizing, duh?
-
-BPE is better than regex-based simple tokenizer's because if it encounters an unfamiliar word, it cann represent it as a sequence of subword tokens or chars.
+note that bpe does not need the `<| unk |>` token as it is iteratively figuring out words and assigning tokens unlike the tokenizing approaches of `SimpleTokenizerV2`. If it encounters an unfamiliar word during tokenization, it can represent it as a sequence of subword tokens or characters. 
+The ability to break down unknown words into individual characters ensures that the tokenizer and, consequently, the LLM that is trained with it can process any text, even if it contains words that were not present in its training data  
+(Normally used with `tiktoken` - library for tokenizing, duh?)
 
 
 ### 2.6 Data Sampling wih a sliding window
