--- a/..md
+++ b/..md
@@ -1,7 +1,7 @@
 # Chapter 2
 
-### 2.1 understanding word embeddings
-embeddings are just convertin non numerical data (such as text) into numeric data - this is called word embedding. map each word to a numeric data.
+## 2.1 understanding word embeddings
+Embeddings are just convertin non numerical data (such as text) into numeric data - this is called word embedding. map each word to a numeric data.
 Also there's sentence or paragraph embeddings - mapping sentences/paras to numeric data (used in RAG btw)
 
 word2vec is an embedding model that would figure out the word embeddings by predicting the context of that word given the target or by predicting the target given the context (exact details idk man)  
@@ -15,7 +15,7 @@ Summary:
 - word2vec is a pretrained neural network normally used to generate embeddings for ml models
 - llms usually do not use word2vec. They have their own embeddings in the input layer. Think of llms as one neural network - everything is happening within
 
-### 2.2 tokenizing text
+## 2.2 tokenizing text
 now forget embeddings for a while, you need to tokenize text first.
 - each word is a token, each special character is a token
 - each whitespace is skipped, all others are split into tokens\
@@ -26,7 +26,7 @@ so you:
 - some words are connected with a punctuation so you're now splitting each punctuation mark too. 
 - now loop through each and remove whitespace tokens for the simplicity 
 
-### 2.3 converting tokens into token ids
+## 2.3 converting tokens into token ids
 In this step you will convert all tokens into token ids. This step comes before converting the token ids into embedding vectors. 
 So far;
 - split text into tokens
@@ -67,7 +67,7 @@ Now try using a word which is not available in the vocab - (book used 'hello') a
 
 
 
-### 2.4 Special context tokens
+## 2.4 Special context tokens
 In 2.3, you encountered an error because the token which was to be encoded wasn't available in `vocab` so now enters `SimpleTokenizerV2` which will encode the words that aren't in `vocab` with a special token `<| unk |>`.
 
 Also whenever concatenating text from different sources, use the `<| end of text |>` special token so that the model knows that these texts are separate - this will help in better 'next-word' prediction thingy as you will be separating the context.   
@@ -97,7 +97,7 @@ tldr;
 - gpt tokenizer only uses <| end of text |> token for simplicity
 - gpt tokenizer also doesn't use <| unk |> token for out of vocab words instead they use byte pair encoding which breaks down words into subwords
 
-### 2.5 Byte Pair Encoding
+## 2.5 Byte Pair Encoding
 (book doesn't go deep  in this but i will, lol)  
 
 BPE looks at data then decides how to tokenize them, went ahead and found out the whole algorithm, it's relatively easy
@@ -111,24 +111,75 @@ note that bpe does not need the `<| unk |>` token as it is iteratively figuring 
 The ability to break down unknown words into individual characters ensures that the tokenizer and, consequently, the LLM that is trained with it can process any text, even if it contains words that were not present in its training data  
 (Normally used with `tiktoken` - library for tokenizing, duh?)
 
+Just to recap, so far:  
+- split text into tokens 
+- use those tokens to create `vocab` i.e assign each token a token id
+- convert all tokens into token ids
+- created `SimpleTokenizerV1` (without special tokens), `SimpleTokenizerV2` (with special tokens) and then finally used `tiktoken` to just use BPE algorithm as BPE is much better at working with new words. if any word is not in its vocab, it will represent it as a collection of tokens
 
-### 2.6 Data Sampling wih a sliding window
+
+## 2.6 Data Sampling wih a sliding window
+LLms are pretrained by predicting the next word in a text;  
+  
+![alt text](md-assets/image2.png)
+
 Next step is to create input-target pairs.  
+You accept a list of inputs then the model predicts the most likely next word for that list of inputs. 
+
 Input is the group of words you feed into an llm  
 target would be the word that it should predict  
 
 ##### Sliding window Approach: 
-take a chunk of tokens, create x from 0:lastidx and then a y from 1:lastidx+1
+Read `the-verdict.txt`, and tokenize using bpe tokenizer
+The most intuitive ways to create the input-target pairs for the next word prediction task is to create two variables, x and y, where x contains the input
+tokens and y contains the targets, which are the inputs shifted by 1.
+Take a chunk of tokens, create x from 0:lastidx and then a y from 1:lastidx+1
 
-- the first approach is to create two lists with indices as described above
-- You then create a GPTDatasetv1, which is in short the same list of token ids except this time it's a tensor (multidimensional array - see fig2.13 again? )
+```Python
+context_size = 4
+x = enc_sample[:context_size]
+y = enc_sample[1:context_size+1]
+print(f"x: {x}")
+print(f"y:
+{y}")
+```
+Here, `context_size` is how many tokens would be included in the input. `context_size+ 1`would be the target pairs
 
-the code here was kinda complicating so just to recap:  
-- created a gptdatasetv1, all its doing is creating the input-target pair splits except it is tensors instead of lists. One more extra thing is that it's splitting these into chunks. say you have a text of 1000 tokens. GPTDatasetV1 will convert that into 1000 token ids, split by idk say 10 (which is the attribute `max_length`) so there's 100 splits of 10 token ids each and there's an attribute `stride` which means um say you created input/target pairs for 10 tokens (coz 10 is `max_length` suppose) - after creating a batch of 0-9 tokens, we will move forward by `stride` (suppose `stride` is 5) so you move to token 5 (think 0,1,2,3,4 is 5 tokens so the next is token number 5, i hope im making sense??) then repeat. Now for each of these splits (each split is `max_length` long), you have two tensors : an input tensor and a target tensor. 
-Each target tensor is the same as it's input sensors just shifted by 1
-- `createdataloaderv1` is just initializing a tiktoken tokenizer and sending it to to the `GPTDatasetV1` class  
+One last step before turning tokens into embeddings: implementing an efficient data loader that iterates over the input dataset and returns the inputs and targets as PyTorch tensors, which can be thought of as multidimensional arrays
   
+![alt text](md-assets/image3.png)  
   
+Creating this class to create input/target pairs in tensors with each tensor created by a skipping-token-amount of `stride` (if that makes sense):  
+
+```Python
+class GPTDatasetV1(Dataset):
+    def __init__(self, txt, tokenizer, max_length, stride):
+        self.input_ids = []
+        self.target_ids = []
+
+        token_ids = tokenizer.encode(txt)
+
+        for i in range(0, len(token_ids) - max_length, stride):
+            input_chunk = token_ids[i:1 + max_length]
+            target_chunk = token_ids[i + 1: i + max_length + 1]
+            self.input_ids.append(torch.tensor(input_chunk))
+            self.target_ids.append(torch.tensor(target_chunk))
+
+    
+    def __len__(self):
+        return len(self.input_ids)
+    
+    def __getitem__(self, idx):
+        return self.input_ids[idx], self.target_ids[idx]
+
+```
+
+The code here was kinda complicating so just to recap:  
+- you're creating batches of input and target ids - call them `chunks`
+- Think of each `chunk` as a tensor in figure 2.13. target chunk is 1 item shifted of input chunk
+- `stride` is how many tokens you will skip through in the next iteration
+- the other two methods are self-explanatory
+
 Smaller batch sizes = Noisy model updates, which is why its normal to have batch sizes over atleast 256.  
 However,  
 Smaller batch sizes = less memory required during training, so batch size is a tradeoff to experiment wd
