--- a/..md
+++ b/..md
@@ -145,11 +145,13 @@ print(f"y:
 ```
 Here, `context_size` is how many tokens would be included in the input. `context_size+ 1`would be the target pairs
 
+#### Data Loader and Dataset classes
 One last step before turning tokens into embeddings: implementing an efficient data loader that iterates over the input dataset and returns the inputs and targets as PyTorch tensors, which can be thought of as multidimensional arrays
   
 ![alt text](md-assets/image3.png)  
   
 Creating this class to create input/target pairs in tensors with each tensor created by a skipping-token-amount of `stride` (if that makes sense):  
+Each row consists of a number of tokenIDs (based on `max_length`)
 
 ```Python
 class GPTDatasetV1(Dataset):
@@ -179,6 +181,34 @@ The code here was kinda complicating so just to recap:
 - Think of each `chunk` as a tensor in figure 2.13. target chunk is 1 item shifted of input chunk
 - `stride` is how many tokens you will skip through in the next iteration
 - the other two methods are self-explanatory
+
+After that, you just create a small function which works as an invoker/instantiator to the gptdatasetv1 class
+
+```
+def create_dataloader_v1(txt, batch_size=4, max_length=256, stride=128, shuffle=True, drop_last=True, num_workers=0):
+    tokenizer = tiktoken.get_encoding("gpt2")
+    dataset = GPTDatasetV1(txt, tokenizer, max_length, stride)
+
+    dataloader = DataLoader(
+        dataset,
+        batch_size=batch_size,
+        shuffle=shuffle,
+        drop_last=drop_last,
+        num_workers=num_workers
+    )
+
+    return dataloader
+```
+
+Now, if you need to use the `GPTDatasetV1` class, you will do so with the `create_dataloader_v1` method. `GPTDatasetV1` will create the dataset and `DataLoader` will be also instantiated by the `create_dataloader_v1` class.
+
+**Dataset Class** : represents data - tells pytorch what the data is and how to access individual samples
+  
+**DataLoader**: provides a way to load batches of data with shuffling and parallel processing
+
+`max_length` will tell you what the maximum number of items should be in each tensor(both input and output). 
+Also note `batch-size=1` results in tensor of length 1 (like 2d array, length1, inside the length1 you have `max_length` number of elements). 
+Having a `batch_size=8` will result in a tensor of length 8
 
 Smaller batch sizes = Noisy model updates, which is why its normal to have batch sizes over atleast 256.  
 However,  
