positional embeddings and absolute positional embeddings done

--- a/..md
+++ b/..md
@@ -219,11 +219,29 @@ Also note, batch_size is the length of a tensor and max_length is the number of 
 
 
 ### 2.7 Create token embeddings
+This is the last step.
+Embeddings are continuous vector representations and they're necessary since gpt-like llms are deep neural networks trained with the backpropagation algorithm.
+(idk how neural networks are trained with backpropagation algorithm and i dont have time right now so i'll use all my knowledge from reading that one AI history book and random geoffrey hinton articles i found on medium which is that you get to the output, then backtrace. Like go back, and adjusst the weights of that node which was activated to get to that output and if im not wrong you do this for each hidden layer)  
+
+To understand how token id to embedding vector conversion works, take four token ids, small vocab (6 words) and u want to create an embedding size of 3 (note that embedding size is dimensions and its normal to have a lott of those, gpt 3 has 12, 288 - jeez)
+
+
 - embeddings are vector representation of tokens. 
 - In training, you have tokens, you assign a random embedding to all of them then you try predicting the next word in a sentence - this would mostly be wrong so you go back (back propagation) to figure where the error came from then you calculate loss and all to adjust embedding vector values plus some weights now your model is slightly better. repeat this a 1000 times until your model gets better. 
 - `vocab_size` and `output_dim` is the dimension of the resulting tensor embedding thingy
 
-page 42 onwards , i dont get it :/
+- embedding layer is the first real layer of the llm neural network except it's not a layer in the traditional sense - it works as a map. it has a tensor that contains one row per token id and that row is the adjacent embedding. It will map the token id resulting in an output of a 'continuous vector representation' or most commonly known as its gangsta name `embedding`  
+
+In other words, the embedding layer is essen-
+tially a lookup operation that retrieves rows from the embedding layer’s weight matrix
+via a token ID.
+
+To recap, so far:
+- you tokenize words  
+- you map them to a vocab providing a token id for each
+- you have to now map them into input-target pairs
+- then you use batches and stuff to come up with tensors with bunch of parameters such as `max_length` (max token per row), `stride` (how many tokens to skip before moving on to the next per batch) using `Dataset` class (responsible for creating effective datasets with proper batching and input/target pairs) and a `DataLoader` class which will aid in fetching input/target tensors one by one
+- then finally, you convert these input tensors into embedding layeer. You already know the outputs (input/target pairs, remember?) so you're gonna help the llm learn better which inputs are to be mapped to which outputs. Note that embeddings are assumed at first then gradually adjusted during the training process
 
 
 ### 2.8 Encoding word positions
