--- a/..md
+++ b/..md
@@ -257,4 +257,15 @@ To solve this, there's two broad categories of position-aware embeddings (embedd
 - **Relative Positional Embeddings**:  
 Relative positional embeddings will tell you relationships based on how far apart instead of "at wihch exact position". this will help generalizing better to variable sequence length
 
-(GPT models use ansolute positional embeddings, instead of fixed positional encodings in the original transformer model)
+(GPT models use absolute positional embeddings, instead of fixed positional encodings in the original transformer model)
+
+To implement this, follow the following steps:  
+- Load raw text from "the-verdict.txt"  
+- Define vocabulary size and embedding dimension  
+- Create an embedding layer to map token IDs to 256-dimensional vectors
+- Tokenize text and prepare batches using create_dataloader_v1, with sliding windows
+- Fetch one batch of input and target token IDs
+- Convert token IDs to embeddings via the token embedding layer
+- Create a positional embedding layer for max_length positions
+- Generate absolute positional embeddings (one per position index)
+- Add token and positional embeddings together to get final input  embeddings for the model
