--- a/..md
+++ b/..md
@@ -268,4 +268,37 @@ To implement this, follow the following steps:
 - Convert token IDs to embeddings via the token embedding layer
 - Create a positional embedding layer for max_length positions
 - Generate absolute positional embeddings (one per position index)
-- Add token and positional embeddings together to get final input  embeddings for the model
+- Add token and positional embeddings together to get final input  embeddings for 
+
+## Chapter 2 Summary:
+Summary
+- LLMs require textual data to be converted into numerical vectors, known as
+embeddings, since they can’t process raw text. Embeddings transform discrete
+data (like words or images) into continuous vector spaces, making them com-
+patible with neural network operations.
+- As the first step, raw text is broken into tokens, which can be words or characters.
+Then, the tokens are converted into integer representations, termed token IDs.
+- Special tokens, such as <|unk|> and <|endoftext|>, can be added to enhance
+the model’s understanding and handle various contexts, such as unknown
+words or marking the boundary between unrelated texts.
+the model
+- The byte pair encoding (BPE) tokenizer used for LLMs like GPT-2 and GPT-3
+can efficiently handle unknown words by breaking them down into subword
+units or individual characters.
+- We use a sliding window approach on tokenized data to generate input–target
+pairs for LLM training.
+- Embedding layers in PyTorch function as a lookup operation, retrieving vectors
+corresponding to token IDs. The resulting embedding vectors provide continu-
+ous representations of tokens, which is crucial for training deep learning mod-
+els like LLMs.
+- While token embeddings provide consistent vector representations for each
+token, they lack a sense of the token’s position in a sequence. To rectify this,
+two main types of positional embeddings exist: absolute and relative. OpenAI’s
+GPT models utilize absolute positional embeddings, which are added to the token
+embedding vectors and are optimized during the model training.
+
+
+
+# Chapter 3
+So far, tokenize text, convert into token ids, create embeddings.
+Now comes the attention mechanism part
