--- a/..md
+++ b/..md
@@ -288,8 +288,7 @@ units or individual characters.
 - We use a sliding window approach on tokenized data to generate input–target
 pairs for LLM training.
 - Embedding layers in PyTorch function as a lookup operation, retrieving vectors
-corresponding to token IDs. The resulting embedding vectors provide continu-
-ous representations of tokens, which is crucial for training deep learning mod-
+corresponding to token IDs. The resulting embedding vectors provide continuous representations of tokens, which is crucial for training deep learning mod-
 els like LLMs.
 - While token embeddings provide consistent vector representations for each
 token, they lack a sense of the token’s position in a sequence. To rectify this,
@@ -302,3 +301,10 @@ embedding vectors and are optimized during the model training.
 # Chapter 3
 So far, tokenize text, convert into token ids, create embeddings.
 Now comes the attention mechanism part
+4 variants of attention mechanism covered:
+1) Simplified self attention
+2) Self attention
+3) Causal attention
+4) Multi-head attention
+
+### 3.1 The problem with modeling long sequences:
