--- a/..md
+++ b/..md
@@ -308,3 +308,13 @@ Now comes the attention mechanism part
 4) Multi-head attention
 
 ### 3.1 The problem with modeling long sequences:
+consider translating two languages, there are often occurrences where a sentence cannot be mapped word by word to another language as each language has its own semantics and certain words go at certain positions which isnt necessarily uniform among all languages. 
+you can imagine, a translating neural network not being efficient if all its doing is translating each word without context.
+
+To solve this problem, neural networks with encoder and decoders are used. The encoder reads the entire text and processes it and then the decoder produces the translated text. Before transformers, RNNs were used where outouts from previous steps are fed as inputs to the current step
+
+The big limitation of encoder–decoder RNNs is that the RNN can’t directly access
+earlier hidden states from the encoder during the decoding phase. Consequently, it
+relies solely on the current hidden state, which encapsulates all relevant information.
+This can lead to a loss of context, especially in complex sentences where dependen-
+cies might span long distances.
