--- a/..md
+++ b/..md
@@ -318,3 +318,8 @@ earlier hidden states from the encoder during the decoding phase. Consequently, 
 relies solely on the current hidden state, which encapsulates all relevant information.
 This can lead to a loss of context, especially in complex sentences where dependen-
 cies might span long distances.
+
+### 3.2 Capturing data dependencies with attention mechanisms
+RNNs wont work well for longer texts - but will work fine for shorter sentences. The problem is that RNN would not have a wider context of previous words in the input. The rnn must remember the entire encoeded in out iin a single hidden state before passing it to the decoder
+
+To solve this, came bahdanau attention mechanism that had attention mechanism built in into it, but later everyone realized 'hey, we dont nned rnns' and enter transformer architecture with a self attention mechanism
