--- a/..md
+++ b/..md
@@ -1,3 +1,6 @@
+# An overview of how LLMs work (chp1):
+//todo
+
 # Chapter 2
 
 ## 2.1 understanding word embeddings
@@ -323,3 +326,5 @@ cies might span long distances.
 RNNs wont work well for longer texts - but will work fine for shorter sentences. The problem is that RNN would not have a wider context of previous words in the input. The rnn must remember the entire encoeded in out iin a single hidden state before passing it to the decoder
 
 To solve this, came bahdanau attention mechanism that had attention mechanism built in into it, but later everyone realized 'hey, we dont nned rnns' and enter transformer architecture with a self attention mechanism
+
+### 3.3 Attending to different parts of the input with self attention:
