--- a/..md
+++ b/..md
@@ -328,3 +328,52 @@ RNNs wont work well for longer texts - but will work fine for shorter sentences.
 To solve this, came bahdanau attention mechanism that had attention mechanism built in into it, but later everyone realized 'hey, we dont nned rnns' and enter transformer architecture with a self attention mechanism
 
 ### 3.3 Attending to different parts of the input with self attention:
+The idea here is to create context vectors such that each element of a sequence (consider the phrase "Your Journey Starts") where each word is represented by x(i) and we have to calculate z(i) for all x(i) which is sort of a map for one word and its relation to all others if that makes sense
+
+To illustrate this concept, let’s focus on the embedding vector of the second input
+element, x(2) (which corresponds to the token “journey”), and the corresponding con-
+text vector, z(2), shown at the bottom of figure 3.7. This enhanced context vector, z(2),
+is an embedding that contains information about x(2) and all other input elements,
+x(1) to x(T).
+
+The first step of implementing self-attention is to compute intermediate values ω referred to as attention scores and for each input vector x(1), you compute relevant attention scores by finding out the dot product between the input vector x(1) and other input vector {x(2), x(3)}
+
+In the next step, we normalize each of the attention scores we computed previously You have to obtain attention weights that must sum up to 1 - thus the normalization.
+
+To normalize, divide each attention weight you calculated by the sum of all attention weights - doing so will result in a sum of all attention weights = 1
+
+```Python
+query = inputs[1]
+attn_scores_2 = torch.empty(inputs.shape[0])
+for i, x_i in enumerate(inputs):
+    attn_scores_2[i] = torch.dot(x_i, query)
+print(attn_scores_2)
+
+attn_weights_2_tmp = attn_scores_2 / attn_scores_2.sum()
+print("Attention weights:", attn_weights_2_tmp)
+print("Sum:", attn_weights_2_tmp.sum())
+
+```
+Normalization can be done by using the softmax function, whose basic implementation is as follows:
+```Python
+def softmax_naive(x):
+    return torch.exp(x) / torch.exp(x).sum(dim=0)
+
+attn_weights_2_naive = softmax_naive(attn_scores_2)
+print("Attention weights:", attn_weights_2_naive)
+print("Sum:", attn_weights_2_naive.sum())
+
+```
+
+In addition, the softmax function ensures that the attention weights are always posi-
+tive. This makes the output interpretable as probabilities or relative importance,
+where higher weights indicate greater importance.
+
+However the naive softmax algorithm may run into problems as overflow or underflow when dealing with large or small input values - which is why pytorch's softmax is much better
+
+```Python
+attn_weights_2 = torch.softmax(attn_scores_2, dim=0)
+print("Attention weights:", attn_weights_2)
+print("Sum:", attn_weights_2.sum())
+
+```
