--- a/..md
+++ b/..md
@@ -377,3 +377,17 @@ print("Attention weights:", attn_weights_2)
 print("Sum:", attn_weights_2.sum())
 
 ```
+
+
+Now since we have already calculated attention weights,we'll now calculate context vector - and you do that by multiplication of input tokens x(i) by their corresponding attention weights and then summing the resulting vectors.
+Thus, context vector z(2) is the weighted sum of all input vectors, obtained by multiplying each input vector by its corresponding attention weight:
+
+```Python
+query = inputs[1]
+context_vec_2 = torch.zeros(query.shape)
+for i,x_i in enumerate(inputs):
+    context_vec_2 += attn_weights_2[i]*x_i
+print(context_vec_2)
+```
+
+Next, we will generalize this procedure for computing context vectors to calculate all context vectors simultaneously.
