--- a/..md
+++ b/..md
@@ -328,6 +328,8 @@ RNNs wont work well for longer texts - but will work fine for shorter sentences.
 To solve this, came bahdanau attention mechanism that had attention mechanism built in into it, but later everyone realized 'hey, we dont nned rnns' and enter transformer architecture with a self attention mechanism
 
 ### 3.3 Attending to different parts of the input with self attention:
+
+## 3.3.1
 The idea here is to create context vectors such that each element of a sequence (consider the phrase "Your Journey Starts") where each word is represented by x(i) and we have to calculate z(i) for all x(i) which is sort of a map for one word and its relation to all others if that makes sense
 
 To illustrate this concept, let’s focus on the embedding vector of the second input
@@ -391,3 +393,29 @@ print(context_vec_2)
 ```
 
 Next, we will generalize this procedure for computing context vectors to calculate all context vectors simultaneously.
+
+## 3.3.2 Computing Attention weights for all input tokens
+So far, we calculated attention weigths and context vector for input 2 so we're doing it for each input now
+Modified code to compute all context vectors:
+
+```Python
+
+attn_scores = torch.empty(6, 6)
+for i, x_i in enumerate(inputs):
+    for j, x_j in enumerate(inputs):
+        attn_scores[i, j] = torch.dot(x_i, x_j)
+print(attn_scores)
+
+```
+
+![alt text](md-assets/image4.png)
+
+The resulting attention scores look a lil like this:
+```
+tensor([[0.9995, 0.9544, 0.9422, 0.4753, 0.4576, 0.6310],
+[0.9544, 1.4950, 1.4754, 0.8434, 0.7070, 1.0865],
+[0.9422, 1.4754, 1.4570, 0.8296, 0.7154, 1.0605],
+[0.4753, 0.8434, 0.8296, 0.4937, 0.3474, 0.6565],
+[0.4576, 0.7070, 0.7154, 0.3474, 0.6654, 0.2935],
+[0.6310, 1.0865, 1.0605, 0.6565, 0.2935, 0.9450]])
+```
