--- a/..md
+++ b/..md
@@ -1,5 +1,19 @@
 # An overview of how LLMs work (chp1):
-//todo
+Large Language Models (LLMs) work in three big steps:
+
+### Training on massive text
+- They’re fed huge amounts of text (books, code, websites).
+- The model learns patterns: grammar, facts, reasoning shortcuts, styles of writing.
+- The core task is predicting the next word in a sequence.
+
+### Neural network architecture (Transformers)
+- Built on the Transformer model.
+- Uses self-attention to decide which words in a sentence matter most to each other.
+- Multiple layers of attention and feedforward networks build complex representations of text.
+
+### Inference (using the model)
+- Given a prompt, the model encodes it into vectors.
+- It predicts the most likely next token (word/part of word) repeatedly.
 
 # Chapter 2
 
